test/compile-errors/extern-errors.crow
main nat64^(_ string[])
	()

r record extern
	a string
	b nat64 list

r2 record extern by-val
	a nat64

r3 record extern by-ref
	a nat64

u union extern
	a string

f void() extern

f void() c extern

f string() c extern

f void(a string) c extern

f[t] void(a t) c extern

f void(...a nat64 array) c extern

some-spec spec
	foo void()

f void() c extern, some-spec

f void() bare, c extern

f void() unsafe, c extern

g global(nat) c extern

g global(nat)

g nat() builtin, c extern
